PHASE-1/PARSER/y.output
Terminals unused in grammar

   INCLUDE
   DEFINE
   MAIN
   leftshift_assignment_operator
   rightshift_assignment_operator
   XOR_assignment_operator
   OR_assignment_operator
   AND_assignment_operator
   pipe_operator
   caret_operator
   amp_operator
   leftshift_operator
   rightshift_operator
   SIZEOF
   tilde_operator


State 1 conflicts: 1 shift/reduce
State 36 conflicts: 13 reduce/reduce
State 44 conflicts: 11 shift/reduce
State 62 conflicts: 1 shift/reduce, 30 reduce/reduce
State 69 conflicts: 1 reduce/reduce
State 71 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 78 conflicts: 11 shift/reduce
State 211 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration D

    3 D: declaration_list
    4  | %empty

    5 declaration: variable_declaration
    6            | function_declaration
    7            | structure_definition

    8 variable_declaration: type_specifier variable_declaration_list ';'
    9                     | structure_declaration

   10 variable_declaration_list: variable_declaration_identifier V

   11 V: ',' variable_declaration_list
   12  | %empty

   13 $@1: %empty

   14 variable_declaration_identifier: identifier $@1 identifier_array_type
   15                                | expression

   16 identifier_array_type: '[' initilization_params
   17                      | %empty

   18 initilization_params: integer_constant ']' initilization
   19                     | ']' string_initilization

   20 initilization: string_initilization
   21              | array_initialization
   22              | %empty

   23 type_specifier: INT
   24               | CHAR
   25               | FLOAT
   26               | DOUBLE
   27               | LONG long_grammar
   28               | SHORT short_grammar
   29               | UNSIGNED unsigned_grammar
   30               | SIGNED signed_grammar
   31               | VOID
   32               | STRUCT

   33 unsigned_grammar: INT
   34                 | LONG long_grammar
   35                 | SHORT short_grammar
   36                 | %empty

   37 signed_grammar: INT
   38               | LONG long_grammar
   39               | SHORT short_grammar
   40               | %empty

   41 long_grammar: INT
   42             | %empty

   43 short_grammar: INT
   44              | %empty

   45 $@2: %empty

   46 structure_definition: STRUCT identifier $@2 '{' V '}' ';'

   47 structure_declaration: STRUCT identifier variable_declaration_list

   48 V: variable_declaration V

   49 function_declaration: function_declaration_type function_declaration_param_statement

   50 function_declaration_type: type_specifier identifier '('

   51 function_declaration_param_statement: params ')' statement

   52 params: parameters_list
   53       | %empty

   54 parameters_list: type_specifier parameters_identifier_list

   55 parameters_identifier_list: param_identifier parameters_identifier_list_breakup

   56 parameters_identifier_list_breakup: ',' parameters_list
   57                                   | %empty

   58 $@3: %empty

   59 param_identifier: identifier $@3 param_identifier_breakup

   60 param_identifier_breakup: '[' ']'
   61                         | %empty

   62 statement: expression_statment
   63          | compound_statement
   64          | conditional_statements
   65          | iterative_statements
   66          | return_statement
   67          | break_statement
   68          | variable_declaration

   69 compound_statement: '{' statment_list '}'

   70 statment_list: statement statment_list
   71              | %empty

   72 expression_statment: expression ';'
   73                    | ';'

   74 conditional_statements: IF '(' simple_expression ')' statement conditional_statements_breakup

   75 conditional_statements_breakup: ELSE statement
   76                               | %empty

   77 iterative_statements: WHILE '(' simple_expression ')' statement
   78                     | FOR '(' expression ';' simple_expression ';' expression ')'
   79                     | DO statement WHILE '(' simple_expression ')' ';'

   80 return_statement: RETURN return_statement_breakup

   81 return_statement_breakup: ';'
   82                         | expression ';'

   83 break_statement: BREAK ';'

   84 string_initilization: assignment_operator string_constant

   85 array_initialization: assignment_operator '{' array_int_declarations '}'

   86 array_int_declarations: integer_constant array_int_declarations_breakup

   87 array_int_declarations_breakup: ',' array_int_declarations
   88                               | %empty

   89 expression: mutable expression_breakup
   90           | simple_expression

   91 expression_breakup: assignment_operator expression
   92                   | addition_assignment_operator expression
   93                   | subtraction_assignment_operator expression
   94                   | multiplication_assignment_operator expression
   95                   | division_assignment_operator expression
   96                   | modulo_assignment_operator expression
   97                   | increment_operator
   98                   | decrement_operator

   99 simple_expression: and_expression simple_expression_breakup

  100 simple_expression_breakup: OR_operator and_expression simple_expression_breakup
  101                          | %empty

  102 and_expression: unary_relation_expression and_expression_breakup

  103 and_expression_breakup: AND_operator unary_relation_expression and_expression_breakup
  104                       | %empty

  105 unary_relation_expression: exclamation_operator unary_relation_expression
  106                          | regular_expression

  107 regular_expression: sum_expression regular_expression_breakup

  108 regular_expression_breakup: relational_operators sum_expression
  109                           | %empty

  110 relational_operators: greaterthan_assignment_operator
  111                     | lessthan_assignment_operator
  112                     | greaterthan_operator
  113                     | lessthan_operator
  114                     | equality_operator
  115                     | inequality_operator

  116 sum_expression: sum_expression sum_operators term
  117               | term

  118 sum_operators: add_operator
  119              | subtract_operator

  120 term: term MULOP factor
  121     | factor

  122 MULOP: multiplication_operator
  123      | division_operator
  124      | modulo_operator

  125 factor: immutable
  126       | mutable

  127 mutable: identifier
  128        | mutable mutable_breakup

  129 mutable_breakup: '[' expression ']'
  130                | '.' identifier

  131 immutable: '(' expression ')'
  132          | call
  133          | constant

  134 call: identifier '(' arguments ')'

  135 arguments: arguments_list
  136          | %empty

  137 arguments_list: expression A

  138 A: ',' expression A
  139  | %empty

  140 constant: integer_constant
  141         | string_constant
  142         | float_constant
  143         | character_constant


Terminals, with rules where they appear

$end (0) 0
'(' (40) 50 74 77 78 79 131 134
')' (41) 51 74 77 78 79 131 134
',' (44) 11 56 87 138
'.' (46) 130
';' (59) 8 46 72 73 78 79 81 82 83
'[' (91) 16 60 129
']' (93) 18 19 60 129
'{' (123) 46 69 85
'}' (125) 46 69 85
error (256)
identifier (258) 14 46 47 50 59 127 130 134
integer_constant (259) 18 86 140
string_constant (260) 84 141
float_constant (261) 142
character_constant (262) 143
FOR (263) 78
WHILE (264) 77 79
IF (265) 74
STRUCT (266) 32 46 47
DO (267) 79
VOID (268) 31
INT (269) 23 33 37 41 43
CHAR (270) 24
FLOAT (271) 25
DOUBLE (272) 26
LONG (273) 27 34 38
SHORT (274) 28 35 39
SIGNED (275) 30
UNSIGNED (276) 29
INCLUDE (277)
DEFINE (278)
BREAK (279) 83
MAIN (280)
RETURN (281) 80
ELSE (282) 75
leftshift_assignment_operator (283)
rightshift_assignment_operator (284)
XOR_assignment_operator (285)
OR_assignment_operator (286)
AND_assignment_operator (287)
modulo_assignment_operator (288) 96
multiplication_assignment_operator (289) 94
division_assignment_operator (290) 95
addition_assignment_operator (291) 92
subtraction_assignment_operator (292) 93
assignment_operator (293) 84 85 91
OR_operator (294) 100
AND_operator (295) 103
pipe_operator (296)
caret_operator (297)
amp_operator (298)
equality_operator (299) 114
inequality_operator (300) 115
lessthan_assignment_operator (301) 111
lessthan_operator (302) 113
greaterthan_assignment_operator (303) 110
greaterthan_operator (304) 112
leftshift_operator (305)
rightshift_operator (306)
add_operator (307) 118
subtract_operator (308) 119
multiplication_operator (309) 122
division_operator (310) 123
modulo_operator (311) 124
SIZEOF (312)
tilde_operator (313)
exclamation_operator (314) 105
increment_operator (315) 97
decrement_operator (316) 98


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
program (72)
    on left: 1, on right: 0
declaration_list (73)
    on left: 2, on right: 1 3
D (74)
    on left: 3 4, on right: 2
declaration (75)
    on left: 5 6 7, on right: 2
variable_declaration (76)
    on left: 8 9, on right: 5 48 68
variable_declaration_list (77)
    on left: 10, on right: 8 11 47
V (78)
    on left: 11 12 48, on right: 10 46 48
variable_declaration_identifier (79)
    on left: 14 15, on right: 10
$@1 (80)
    on left: 13, on right: 14
identifier_array_type (81)
    on left: 16 17, on right: 14
initilization_params (82)
    on left: 18 19, on right: 16
initilization (83)
    on left: 20 21 22, on right: 18
type_specifier (84)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 8 50 54
unsigned_grammar (85)
    on left: 33 34 35 36, on right: 29
signed_grammar (86)
    on left: 37 38 39 40, on right: 30
long_grammar (87)
    on left: 41 42, on right: 27 34 38
short_grammar (88)
    on left: 43 44, on right: 28 35 39
structure_definition (89)
    on left: 46, on right: 7
$@2 (90)
    on left: 45, on right: 46
structure_declaration (91)
    on left: 47, on right: 9
function_declaration (92)
    on left: 49, on right: 6
function_declaration_type (93)
    on left: 50, on right: 49
function_declaration_param_statement (94)
    on left: 51, on right: 49
params (95)
    on left: 52 53, on right: 51
parameters_list (96)
    on left: 54, on right: 52 56
parameters_identifier_list (97)
    on left: 55, on right: 54
parameters_identifier_list_breakup (98)
    on left: 56 57, on right: 55
param_identifier (99)
    on left: 59, on right: 55
$@3 (100)
    on left: 58, on right: 59
param_identifier_breakup (101)
    on left: 60 61, on right: 59
statement (102)
    on left: 62 63 64 65 66 67 68, on right: 51 70 74 75 77 79
compound_statement (103)
    on left: 69, on right: 63
statment_list (104)
    on left: 70 71, on right: 69 70
expression_statment (105)
    on left: 72 73, on right: 62
conditional_statements (106)
    on left: 74, on right: 64
conditional_statements_breakup (107)
    on left: 75 76, on right: 74
iterative_statements (108)
    on left: 77 78 79, on right: 65
return_statement (109)
    on left: 80, on right: 66
return_statement_breakup (110)
    on left: 81 82, on right: 80
break_statement (111)
    on left: 83, on right: 67
string_initilization (112)
    on left: 84, on right: 19 20
array_initialization (113)
    on left: 85, on right: 21
array_int_declarations (114)
    on left: 86, on right: 85 87
array_int_declarations_breakup (115)
    on left: 87 88, on right: 86
expression (116)
    on left: 89 90, on right: 15 72 78 82 91 92 93 94 95 96 129 131
    137 138
expression_breakup (117)
    on left: 91 92 93 94 95 96 97 98, on right: 89
simple_expression (118)
    on left: 99, on right: 74 77 78 79 90
simple_expression_breakup (119)
    on left: 100 101, on right: 99 100
and_expression (120)
    on left: 102, on right: 99 100
and_expression_breakup (121)
    on left: 103 104, on right: 102 103
unary_relation_expression (122)
    on left: 105 106, on right: 102 103 105
regular_expression (123)
    on left: 107, on right: 106
regular_expression_breakup (124)
    on left: 108 109, on right: 107
relational_operators (125)
    on left: 110 111 112 113 114 115, on right: 108
sum_expression (126)
    on left: 116 117, on right: 107 108 116
sum_operators (127)
    on left: 118 119, on right: 116
term (128)
    on left: 120 121, on right: 116 117 120
MULOP (129)
    on left: 122 123 124, on right: 120
factor (130)
    on left: 125 126, on right: 120 121
mutable (131)
    on left: 127 128, on right: 89 126 128
mutable_breakup (132)
    on left: 129 130, on right: 128
immutable (133)
    on left: 131 132 133, on right: 125
call (134)
    on left: 134, on right: 132
arguments (135)
    on left: 135 136, on right: 134
arguments_list (136)
    on left: 137, on right: 135
A (137)
    on left: 138 139, on right: 137 138
constant (138)
    on left: 140 141 142 143, on right: 133


State 0

    0 $accept: . program $end

    STRUCT    shift, and go to state 1
    VOID      shift, and go to state 2
    INT       shift, and go to state 3
    CHAR      shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10

    program                    go to state 11
    declaration_list           go to state 12
    declaration                go to state 13
    variable_declaration       go to state 14
    type_specifier             go to state 15
    structure_definition       go to state 16
    structure_declaration      go to state 17
    function_declaration       go to state 18
    function_declaration_type  go to state 19


State 1

   32 type_specifier: STRUCT .
   46 structure_definition: STRUCT . identifier $@2 '{' V '}' ';'
   47 structure_declaration: STRUCT . identifier variable_declaration_list

    identifier  shift, and go to state 20

    identifier  [reduce using rule 32 (type_specifier)]
    $default    reduce using rule 32 (type_specifier)


State 2

   31 type_specifier: VOID .

    $default  reduce using rule 31 (type_specifier)


State 3

   23 type_specifier: INT .

    $default  reduce using rule 23 (type_specifier)


State 4

   24 type_specifier: CHAR .

    $default  reduce using rule 24 (type_specifier)


State 5

   25 type_specifier: FLOAT .

    $default  reduce using rule 25 (type_specifier)


State 6

   26 type_specifier: DOUBLE .

    $default  reduce using rule 26 (type_specifier)


State 7

   27 type_specifier: LONG . long_grammar

    INT  shift, and go to state 21

    $default  reduce using rule 42 (long_grammar)

    long_grammar  go to state 22


State 8

   28 type_specifier: SHORT . short_grammar

    INT  shift, and go to state 23

    $default  reduce using rule 44 (short_grammar)

    short_grammar  go to state 24


State 9

   30 type_specifier: SIGNED . signed_grammar

    INT    shift, and go to state 25
    LONG   shift, and go to state 26
    SHORT  shift, and go to state 27

    $default  reduce using rule 40 (signed_grammar)

    signed_grammar  go to state 28


State 10

   29 type_specifier: UNSIGNED . unsigned_grammar

    INT    shift, and go to state 29
    LONG   shift, and go to state 30
    SHORT  shift, and go to state 31

    $default  reduce using rule 36 (unsigned_grammar)

    unsigned_grammar  go to state 32


State 11

    0 $accept: program . $end

    $end  shift, and go to state 33


State 12

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 13

    2 declaration_list: declaration . D

    STRUCT    shift, and go to state 1
    VOID      shift, and go to state 2
    INT       shift, and go to state 3
    CHAR      shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10

    $default  reduce using rule 4 (D)

    declaration_list           go to state 34
    D                          go to state 35
    declaration                go to state 13
    variable_declaration       go to state 14
    type_specifier             go to state 15
    structure_definition       go to state 16
    structure_declaration      go to state 17
    function_declaration       go to state 18
    function_declaration_type  go to state 19


State 14

    5 declaration: variable_declaration .

    $default  reduce using rule 5 (declaration)


State 15

    8 variable_declaration: type_specifier . variable_declaration_list ';'
   50 function_declaration_type: type_specifier . identifier '('

    identifier            shift, and go to state 36
    integer_constant      shift, and go to state 37
    string_constant       shift, and go to state 38
    float_constant        shift, and go to state 39
    character_constant    shift, and go to state 40
    exclamation_operator  shift, and go to state 41
    '('                   shift, and go to state 42

    variable_declaration_list        go to state 43
    variable_declaration_identifier  go to state 44
    expression                       go to state 45
    simple_expression                go to state 46
    and_expression                   go to state 47
    unary_relation_expression        go to state 48
    regular_expression               go to state 49
    sum_expression                   go to state 50
    term                             go to state 51
    factor                           go to state 52
    mutable                          go to state 53
    immutable                        go to state 54
    call                             go to state 55
    constant                         go to state 56


State 16

    7 declaration: structure_definition .

    $default  reduce using rule 7 (declaration)


State 17

    9 variable_declaration: structure_declaration .

    $default  reduce using rule 9 (variable_declaration)


State 18

    6 declaration: function_declaration .

    $default  reduce using rule 6 (declaration)


State 19

   49 function_declaration: function_declaration_type . function_declaration_param_statement

    STRUCT    shift, and go to state 57
    VOID      shift, and go to state 2
    INT       shift, and go to state 3
    CHAR      shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10

    $default  reduce using rule 53 (params)

    type_specifier                        go to state 58
    function_declaration_param_statement  go to state 59
    params                                go to state 60
    parameters_list                       go to state 61


State 20

   46 structure_definition: STRUCT identifier . $@2 '{' V '}' ';'
   47 structure_declaration: STRUCT identifier . variable_declaration_list

    identifier            shift, and go to state 62
    integer_constant      shift, and go to state 37
    string_constant       shift, and go to state 38
    float_constant        shift, and go to state 39
    character_constant    shift, and go to state 40
    exclamation_operator  shift, and go to state 41
    '('                   shift, and go to state 42

    $default  reduce using rule 45 ($@2)

    variable_declaration_list        go to state 63
    variable_declaration_identifier  go to state 44
    $@2                              go to state 64
    expression                       go to state 45
    simple_expression                go to state 46
    and_expression                   go to state 47
    unary_relation_expression        go to state 48
    regular_expression               go to state 49
    sum_expression                   go to state 50
    term                             go to state 51
    factor                           go to state 52
    mutable                          go to state 53
    immutable                        go to state 54
    call                             go to state 55
    constant                         go to state 56


State 21

   41 long_grammar: INT .

    $default  reduce using rule 41 (long_grammar)


State 22

   27 type_specifier: LONG long_grammar .

    $default  reduce using rule 27 (type_specifier)


State 23

   43 short_grammar: INT .

    $default  reduce using rule 43 (short_grammar)


State 24

   28 type_specifier: SHORT short_grammar .

    $default  reduce using rule 28 (type_specifier)


State 25

   37 signed_grammar: INT .

    $default  reduce using rule 37 (signed_grammar)


State 26

   38 signed_grammar: LONG . long_grammar

    INT  shift, and go to state 21

    $default  reduce using rule 42 (long_grammar)

    long_grammar  go to state 65


State 27

   39 signed_grammar: SHORT . short_grammar

    INT  shift, and go to state 23

    $default  reduce using rule 44 (short_grammar)

    short_grammar  go to state 66


State 28

   30 type_specifier: SIGNED signed_grammar .

    $default  reduce using rule 30 (type_specifier)


State 29

   33 unsigned_grammar: INT .

    $default  reduce using rule 33 (unsigned_grammar)


State 30

   34 unsigned_grammar: LONG . long_grammar

    INT  shift, and go to state 21

    $default  reduce using rule 42 (long_grammar)

    long_grammar  go to state 67


State 31

   35 unsigned_grammar: SHORT . short_grammar

    INT  shift, and go to state 23

    $default  reduce using rule 44 (short_grammar)

    short_grammar  go to state 68


State 32

   29 type_specifier: UNSIGNED unsigned_grammar .

    $default  reduce using rule 29 (type_specifier)


State 33

    0 $accept: program $end .

    $default  accept


State 34

    3 D: declaration_list .

    $default  reduce using rule 3 (D)


State 35

    2 declaration_list: declaration D .

    $default  reduce using rule 2 (declaration_list)


State 36

   14 variable_declaration_identifier: identifier . $@1 identifier_array_type
   50 function_declaration_type: type_specifier identifier . '('
  127 mutable: identifier .
  134 call: identifier . '(' arguments ')'

    '('  shift, and go to state 69

    STRUCT    reduce using rule 13 ($@1)
    STRUCT    [reduce using rule 127 (mutable)]
    VOID      reduce using rule 13 ($@1)
    VOID      [reduce using rule 127 (mutable)]
    INT       reduce using rule 13 ($@1)
    INT       [reduce using rule 127 (mutable)]
    CHAR      reduce using rule 13 ($@1)
    CHAR      [reduce using rule 127 (mutable)]
    FLOAT     reduce using rule 13 ($@1)
    FLOAT     [reduce using rule 127 (mutable)]
    DOUBLE    reduce using rule 13 ($@1)
    DOUBLE    [reduce using rule 127 (mutable)]
    LONG      reduce using rule 13 ($@1)
    LONG      [reduce using rule 127 (mutable)]
    SHORT     reduce using rule 13 ($@1)
    SHORT     [reduce using rule 127 (mutable)]
    SIGNED    reduce using rule 13 ($@1)
    SIGNED    [reduce using rule 127 (mutable)]
    UNSIGNED  reduce using rule 13 ($@1)
    UNSIGNED  [reduce using rule 127 (mutable)]
    ';'       reduce using rule 13 ($@1)
    ';'       [reduce using rule 127 (mutable)]
    ','       reduce using rule 13 ($@1)
    ','       [reduce using rule 127 (mutable)]
    '['       reduce using rule 13 ($@1)
    '['       [reduce using rule 127 (mutable)]
    $default  reduce using rule 127 (mutable)

    $@1  go to state 70


State 37

  140 constant: integer_constant .

    $default  reduce using rule 140 (constant)


State 38

  141 constant: string_constant .

    $default  reduce using rule 141 (constant)


State 39

  142 constant: float_constant .

    $default  reduce using rule 142 (constant)


State 40

  143 constant: character_constant .

    $default  reduce using rule 143 (constant)


State 41

  105 unary_relation_expression: exclamation_operator . unary_relation_expression

    identifier            shift, and go to state 71
    integer_constant      shift, and go to state 37
    string_constant       shift, and go to state 38
    float_constant        shift, and go to state 39
    character_constant    shift, and go to state 40
    exclamation_operator  shift, and go to state 41
    '('                   shift, and go to state 42

    unary_relation_expression  go to state 72
    regular_expression         go to state 49
    sum_expression             go to state 50
    term                       go to state 51
    factor                     go to state 52
    mutable                    go to state 73
    immutable                  go to state 54
    call                       go to state 55
    constant                   go to state 56


State 42

  131 immutable: '(' . expression ')'

    identifier            shift, and go to state 71
    integer_constant      shift, and go to state 37
    string_constant       shift, and go to state 38
    float_constant        shift, and go to state 39
    character_constant    shift, and go to state 40
    exclamation_operator  shift, and go to state 41
    '('                   shift, and go to state 42

    expression                 go to state 74
    simple_expression          go to state 46
    and_expression             go to state 47
    unary_relation_expression  go to state 48
    regular_expression         go to state 49
    sum_expression             go to state 50
    term                       go to state 51
    factor                     go to state 52
    mutable                    go to state 53
    immutable                  go to state 54
    call                       go to state 55
    constant                   go to state 56


State 43

    8 variable_declaration: type_specifier variable_declaration_list . ';'

    ';'  shift, and go to state 75


State 44

   10 variable_declaration_list: variable_declaration_identifier . V

    STRUCT    shift, and go to state 76
    VOID      shift, and go to state 2
    INT       shift, and go to state 3
    CHAR      shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    ','       shift, and go to state 77

    STRUCT    [reduce using rule 12 (V)]
    VOID      [reduce using rule 12 (V)]
    INT       [reduce using rule 12 (V)]
    CHAR      [reduce using rule 12 (V)]
    FLOAT     [reduce using rule 12 (V)]
    DOUBLE    [reduce using rule 12 (V)]
    LONG      [reduce using rule 12 (V)]
    SHORT     [reduce using rule 12 (V)]
    SIGNED    [reduce using rule 12 (V)]
    UNSIGNED  [reduce using rule 12 (V)]
    ','       [reduce using rule 12 (V)]
    $default  reduce using rule 12 (V)

    variable_declaration   go to state 78
    V                      go to state 79
    type_specifier         go to state 80
    structure_declaration  go to state 17


State 45

   15 variable_declaration_identifier: expression .

    $default  reduce using rule 15 (variable_declaration_identifier)


State 46

   90 expression: simple_expression .

    $default  reduce using rule 90 (expression)


State 47

   99 simple_expression: and_expression . simple_expression_breakup

    OR_operator  shift, and go to state 81

    $default  reduce using rule 101 (simple_expression_breakup)

    simple_expression_breakup  go to state 82


State 48

  102 and_expression: unary_relation_expression . and_expression_breakup

    AND_operator  shift, and go to state 83

    $default  reduce using rule 104 (and_expression_breakup)

    and_expression_breakup  go to state 84


State 49

  106 unary_relation_expression: regular_expression .

    $default  reduce using rule 106 (unary_relation_expression)


State 50

  107 regular_expression: sum_expression . regular_expression_breakup
  116 sum_expression: sum_expression . sum_operators term

    equality_operator                shift, and go to state 85
    inequality_operator              shift, and go to state 86
    lessthan_assignment_operator     shift, and go to state 87
    lessthan_operator                shift, and go to state 88
    greaterthan_assignment_operator  shift, and go to state 89
    greaterthan_operator             shift, and go to state 90
    add_operator                     shift, and go to state 91
    subtract_operator                shift, and go to state 92

    $default  reduce using rule 109 (regular_expression_breakup)

    regular_expression_breakup  go to state 93
    relational_operators        go to state 94
    sum_operators               go to state 95


State 51

  117 sum_expression: term .
  120 term: term . MULOP factor

    multiplication_operator  shift, and go to state 96
    division_operator        shift, and go to state 97
    modulo_operator          shift, and go to state 98

    $default  reduce using rule 117 (sum_expression)

    MULOP  go to state 99


State 52

  121 term: factor .

    $default  reduce using rule 121 (term)


State 53

   89 expression: mutable . expression_breakup
  126 factor: mutable .
  128 mutable: mutable . mutable_breakup

    modulo_assignment_operator          shift, and go to state 100
    multiplication_assignment_operator  shift, and go to state 101
    division_assignment_operator        shift, and go to state 102
    addition_assignment_operator        shift, and go to state 103
    subtraction_assignment_operator     shift, and go to state 104
    assignment_operator                 shift, and go to state 105
    increment_operator                  shift, and go to state 106
    decrement_operator                  shift, and go to state 107
    '['                                 shift, and go to state 108
    '.'                                 shift, and go to state 109

    $default  reduce using rule 126 (factor)

    expression_breakup  go to state 110
    mutable_breakup     go to state 111


State 54

  125 factor: immutable .

    $default  reduce using rule 125 (factor)


State 55

  132 immutable: call .

    $default  reduce using rule 132 (immutable)


State 56

  133 immutable: constant .

    $default  reduce using rule 133 (immutable)


State 57

   32 type_specifier: STRUCT .

    $default  reduce using rule 32 (type_specifier)


State 58

   54 parameters_list: type_specifier . parameters_identifier_list

    identifier  shift, and go to state 112

    parameters_identifier_list  go to state 113
    param_identifier            go to state 114


State 59

   49 function_declaration: function_declaration_type function_declaration_param_statement .

    $default  reduce using rule 49 (function_declaration)


State 60

   51 function_declaration_param_statement: params . ')' statement

    ')'  shift, and go to state 115


State 61

   52 params: parameters_list .

    $default  reduce using rule 52 (params)


State 62

   14 variable_declaration_identifier: identifier . $@1 identifier_array_type
  127 mutable: identifier .
  134 call: identifier . '(' arguments ')'

    '('  shift, and go to state 116

    $end                                reduce using rule 13 ($@1)
    $end                                [reduce using rule 127 (mutable)]
    identifier                          reduce using rule 13 ($@1)
    identifier                          [reduce using rule 127 (mutable)]
    integer_constant                    reduce using rule 13 ($@1)
    integer_constant                    [reduce using rule 127 (mutable)]
    string_constant                     reduce using rule 13 ($@1)
    string_constant                     [reduce using rule 127 (mutable)]
    float_constant                      reduce using rule 13 ($@1)
    float_constant                      [reduce using rule 127 (mutable)]
    character_constant                  reduce using rule 13 ($@1)
    character_constant                  [reduce using rule 127 (mutable)]
    FOR                                 reduce using rule 13 ($@1)
    FOR                                 [reduce using rule 127 (mutable)]
    WHILE                               reduce using rule 13 ($@1)
    WHILE                               [reduce using rule 127 (mutable)]
    IF                                  reduce using rule 13 ($@1)
    IF                                  [reduce using rule 127 (mutable)]
    STRUCT                              reduce using rule 13 ($@1)
    STRUCT                              [reduce using rule 127 (mutable)]
    DO                                  reduce using rule 13 ($@1)
    DO                                  [reduce using rule 127 (mutable)]
    VOID                                reduce using rule 13 ($@1)
    VOID                                [reduce using rule 127 (mutable)]
    INT                                 reduce using rule 13 ($@1)
    INT                                 [reduce using rule 127 (mutable)]
    CHAR                                reduce using rule 13 ($@1)
    CHAR                                [reduce using rule 127 (mutable)]
    FLOAT                               reduce using rule 13 ($@1)
    FLOAT                               [reduce using rule 127 (mutable)]
    DOUBLE                              reduce using rule 13 ($@1)
    DOUBLE                              [reduce using rule 127 (mutable)]
    LONG                                reduce using rule 13 ($@1)
    LONG                                [reduce using rule 127 (mutable)]
    SHORT                               reduce using rule 13 ($@1)
    SHORT                               [reduce using rule 127 (mutable)]
    SIGNED                              reduce using rule 13 ($@1)
    SIGNED                              [reduce using rule 127 (mutable)]
    UNSIGNED                            reduce using rule 13 ($@1)
    UNSIGNED                            [reduce using rule 127 (mutable)]
    BREAK                               reduce using rule 13 ($@1)
    BREAK                               [reduce using rule 127 (mutable)]
    RETURN                              reduce using rule 13 ($@1)
    RETURN                              [reduce using rule 127 (mutable)]
    ELSE                                reduce using rule 13 ($@1)
    ELSE                                [reduce using rule 127 (mutable)]
    modulo_assignment_operator          reduce using rule 127 (mutable)
    multiplication_assignment_operator  reduce using rule 127 (mutable)
    division_assignment_operator        reduce using rule 127 (mutable)
    addition_assignment_operator        reduce using rule 127 (mutable)
    subtraction_assignment_operator     reduce using rule 127 (mutable)
    assignment_operator                 reduce using rule 127 (mutable)
    OR_operator                         reduce using rule 127 (mutable)
    AND_operator                        reduce using rule 127 (mutable)
    equality_operator                   reduce using rule 127 (mutable)
    inequality_operator                 reduce using rule 127 (mutable)
    lessthan_assignment_operator        reduce using rule 127 (mutable)
    lessthan_operator                   reduce using rule 127 (mutable)
    greaterthan_assignment_operator     reduce using rule 127 (mutable)
    greaterthan_operator                reduce using rule 127 (mutable)
    add_operator                        reduce using rule 127 (mutable)
    subtract_operator                   reduce using rule 127 (mutable)
    multiplication_operator             reduce using rule 127 (mutable)
    division_operator                   reduce using rule 127 (mutable)
    modulo_operator                     reduce using rule 127 (mutable)
    exclamation_operator                reduce using rule 13 ($@1)
    exclamation_operator                [reduce using rule 127 (mutable)]
    increment_operator                  reduce using rule 127 (mutable)
    decrement_operator                  reduce using rule 127 (mutable)
    ';'                                 reduce using rule 13 ($@1)
    ';'                                 [reduce using rule 127 (mutable)]
    ','                                 reduce using rule 13 ($@1)
    ','                                 [reduce using rule 127 (mutable)]
    '['                                 reduce using rule 13 ($@1)
    '['                                 [reduce using rule 127 (mutable)]
    '{'                                 reduce using rule 13 ($@1)
    '{'                                 [reduce using rule 127 (mutable)]
    '}'                                 reduce using rule 13 ($@1)
    '}'                                 [reduce using rule 127 (mutable)]
    '('                                 [reduce using rule 13 ($@1)]
    '('                                 [reduce using rule 127 (mutable)]
    '.'                                 reduce using rule 127 (mutable)
    $default                            reduce using rule 13 ($@1)

    $@1  go to state 70


State 63

   47 structure_declaration: STRUCT identifier variable_declaration_list .

    $default  reduce using rule 47 (structure_declaration)


State 64

   46 structure_definition: STRUCT identifier $@2 . '{' V '}' ';'

    '{'  shift, and go to state 117


State 65

   38 signed_grammar: LONG long_grammar .

    $default  reduce using rule 38 (signed_grammar)


State 66

   39 signed_grammar: SHORT short_grammar .

    $default  reduce using rule 39 (signed_grammar)


State 67

   34 unsigned_grammar: LONG long_grammar .

    $default  reduce using rule 34 (unsigned_grammar)


State 68

   35 unsigned_grammar: SHORT short_grammar .

    $default  reduce using rule 35 (unsigned_grammar)


State 69

   50 function_declaration_type: type_specifier identifier '(' .
  134 call: identifier '(' . arguments ')'

    identifier            shift, and go to state 71
    integer_constant      shift, and go to state 37
    string_constant       shift, and go to state 38
    float_constant        shift, and go to state 39
    character_constant    shift, and go to state 40
    exclamation_operator  shift, and go to state 41
    '('                   shift, and go to state 42

    ')'       reduce using rule 50 (function_declaration_type)
    ')'       [reduce using rule 136 (arguments)]
    $default  reduce using rule 50 (function_declaration_type)

    expression                 go to state 118
    simple_expression          go to state 46
    and_expression             go to state 47
    unary_relation_expression  go to state 48
    regular_expression         go to state 49
    sum_expression             go to state 50
    term                       go to state 51
    factor                     go to state 52
    mutable                    go to state 53
    immutable                  go to state 54
    call                       go to state 55
    arguments                  go to state 119
    arguments_list             go to state 120
    constant                   go to state 56


State 70

   14 variable_declaration_identifier: identifier $@1 . identifier_array_type

    '['  shift, and go to state 121

    $default  reduce using rule 17 (identifier_array_type)

    identifier_array_type  go to state 122


State 71

  127 mutable: identifier .
  134 call: identifier . '(' arguments ')'

    '('  shift, and go to state 116

    '('       [reduce using rule 127 (mutable)]
    $default  reduce using rule 127 (mutable)


State 72

  105 unary_relation_expression: exclamation_operator unary_relation_expression .

    $default  reduce using rule 105 (unary_relation_expression)


State 73

  126 factor: mutable .
  128 mutable: mutable . mutable_breakup

    '['  shift, and go to state 108
    '.'  shift, and go to state 109

    $default  reduce using rule 126 (factor)

    mutable_breakup  go to state 111


State 74

  131 immutable: '(' expression . ')'

    ')'  shift, and go to state 123


State 75

    8 variable_declaration: type_specifier variable_declaration_list ';' .

    $default  reduce using rule 8 (variable_declaration)


State 76

